# pycurrencyconstants

./: README.md  currencyconsts.py  pyproject.toml  test.py
